doc: add instructions for repository usage

--- a/main.ipynb
+++ b/main.ipynb
@@ -25,9 +25,19 @@
       "source": [
         "# Install dependencies\n",
         "%pip install -qr requirements.txt comet_ml\n",
-        "%conda install pytorch==1.10.1 torchvision==0.11.2 torchaudio==0.10.1 cudatoolkit=10.2 -c pytorch\n",
         "%pip install roboflow\n",
-        "%pip install ipywidgets"
+        "%pip install ipywidgets\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "# To use GPU for training, overwrite the pytorch installation by running the code below\n",
+        "%conda install pytorch==1.10.1 torchvision==0.11.2 torchaudio==0.10.1 cudatoolkit=10.2 -c pytorch"
       ]
     },
     {
