--- a/main.ipynb
+++ b/main.ipynb
@@ -21,12 +21,71 @@
     "id": "wbvMlHd_QwMG",
     "outputId": "e8225db4-e61d-4640-8b1f-8bfce3331cea"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: roboflow in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (1.1.26)\n",
+      "Requirement already satisfied: certifi==2023.7.22 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (2023.7.22)\n",
+      "Requirement already satisfied: chardet==4.0.0 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (4.0.0)\n",
+      "Requirement already satisfied: cycler==0.10.0 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (0.10.0)\n",
+      "Requirement already satisfied: idna==2.10 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (2.10)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (1.4.5)\n",
+      "Requirement already satisfied: matplotlib in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (3.7.5)\n",
+      "Requirement already satisfied: numpy>=1.18.5 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (1.24.3)\n",
+      "Requirement already satisfied: opencv-python-headless==4.8.0.74 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (4.8.0.74)\n",
+      "Requirement already satisfied: Pillow>=7.1.2 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (10.2.0)\n",
+      "Requirement already satisfied: python-dateutil in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (2.9.0)\n",
+      "Requirement already satisfied: python-dotenv in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (1.0.1)\n",
+      "Requirement already satisfied: requests in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (2.31.0)\n",
+      "Requirement already satisfied: six in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (1.16.0)\n",
+      "Requirement already satisfied: urllib3>=1.26.6 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (2.2.1)\n",
+      "Requirement already satisfied: tqdm>=4.41.0 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (4.66.2)\n",
+      "Requirement already satisfied: PyYAML>=5.3.1 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (6.0.1)\n",
+      "Requirement already satisfied: requests-toolbelt in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (1.0.0)\n",
+      "Requirement already satisfied: python-magic in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from roboflow) (0.4.27)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from matplotlib->roboflow) (1.1.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from matplotlib->roboflow) (4.50.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from matplotlib->roboflow) (24.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from matplotlib->roboflow) (3.1.2)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from matplotlib->roboflow) (6.4.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from requests->roboflow) (3.3.2)\n",
+      "Requirement already satisfied: zipp>=3.1.0 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from importlib-resources>=3.2.0->matplotlib->roboflow) (3.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: ipywidgets in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (8.1.2)\n",
+      "Requirement already satisfied: comm>=0.1.3 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipywidgets) (0.2.2)\n",
+      "Requirement already satisfied: ipython>=6.1.0 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipywidgets) (8.12.2)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipywidgets) (5.14.2)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0.10 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipywidgets) (4.0.10)\n",
+      "Requirement already satisfied: jupyterlab-widgets~=3.0.10 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipywidgets) (3.0.10)\n",
+      "Requirement already satisfied: backcall in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (0.2.0)\n",
+      "Requirement already satisfied: decorator in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (0.19.1)\n",
+      "Requirement already satisfied: matplotlib-inline in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (0.1.6)\n",
+      "Requirement already satisfied: pickleshare in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (0.7.5)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (3.0.42)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (2.17.2)\n",
+      "Requirement already satisfied: stack-data in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (0.6.2)\n",
+      "Requirement already satisfied: typing-extensions in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (4.10.0)\n",
+      "Requirement already satisfied: pexpect>4.3 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from ipython>=6.1.0->ipywidgets) (4.9.0)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.3 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets) (0.8.3)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from pexpect>4.3->ipython>=6.1.0->ipywidgets) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30->ipython>=6.1.0->ipywidgets) (0.2.13)\n",
+      "Requirement already satisfied: executing>=1.2.0 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.0.1)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.4.1)\n",
+      "Requirement already satisfied: pure-eval in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.2)\n",
+      "Requirement already satisfied: six>=1.12.0 in /home/sadat/miniconda3/envs/object/lib/python3.8/site-packages (from asttokens>=2.1.0->stack-data->ipython>=6.1.0->ipywidgets) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# # Install dependencies\n",
-    "# %pip install -qr requirements.txt comet_ml\n",
-    "# %pip install roboflow\n",
-    "# %pip install ipywidgets"
+    "%pip install -qr requirements.txt comet_ml\n",
+    "%pip install roboflow\n",
+    "%pip install ipywidgets"
    ]
   },
   {
@@ -59,128 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Channels:\n",
-      " - pytorch\n",
-      " - defaults\n",
-      "Platform: linux-64\n",
-      "Collecting package metadata (repodata.json): done\n",
-      "Solving environment: done\n",
-      "\n",
-      "## Package Plan ##\n",
-      "\n",
-      "  environment location: /home/sadat/miniconda3/envs/object-detection\n",
-      "\n",
-      "  added / updated specs:\n",
-      "    - cudatoolkit=10.1\n",
-      "    - pytorch\n",
-      "    - torchvision\n",
-      "\n",
-      "\n",
-      "The following packages will be downloaded:\n",
-      "\n",
-      "    package                    |            build\n",
-      "    ---------------------------|-----------------\n",
-      "    cudatoolkit-10.1.243       |       h6bb024c_0       347.4 MB\n",
-      "    pytorch-1.10.1             |      py3.8_cpu_0        86.3 MB  pytorch\n",
-      "    torchaudio-0.10.1          |         py38_cpu         4.4 MB  pytorch\n",
-      "    torchvision-0.11.2         |         py38_cpu        25.2 MB  pytorch\n",
-      "    ------------------------------------------------------------\n",
-      "                                           Total:       463.3 MB\n",
-      "\n",
-      "The following packages will be DOWNGRADED:\n",
-      "\n",
-      "  cudatoolkit                            10.2.89-hfd86e86_1 --> 10.1.243-h6bb024c_0 \n",
-      "  pytorch                1.10.1-py3.8_cuda10.2_cudnn7.6.5_0 --> 1.10.1-py3.8_cpu_0 \n",
-      "  pytorch-mutex                                    1.0-cuda --> 1.0-cpu \n",
-      "  torchaudio                              0.10.1-py38_cu102 --> 0.10.1-py38_cpu \n",
-      "  torchvision                             0.11.2-py38_cu102 --> 0.11.2-py38_cpu \n",
-      "\n",
-      "\n",
-      "Proceed ([y]/n)? ^C\n",
-      "\n",
-      "CondaSystemExit: \n",
-      "Operation aborted.  Exiting.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!conda install pytorch torchvision cudatoolkit=10.1 -c pytorch"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.cuda.is_available()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcuda\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/object-detection/lib/python3.8/site-packages/torch/cuda/__init__.py:214\u001b[0m, in \u001b[0;36m_lazy_init\u001b[0;34m()\u001b[0m\n\u001b[1;32m    210\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\n\u001b[1;32m    211\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlibcudart functions unavailable. It looks like you have a broken build?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    212\u001b[0m \u001b[38;5;66;03m# This function throws if there's a driver initialization error, no GPUs\u001b[39;00m\n\u001b[1;32m    213\u001b[0m \u001b[38;5;66;03m# are found or any other error occurs\u001b[39;00m\n\u001b[0;32m--> 214\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_C\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_cuda_init\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    215\u001b[0m \u001b[38;5;66;03m# Some of the queued calls may reentrantly call _lazy_init();\u001b[39;00m\n\u001b[1;32m    216\u001b[0m \u001b[38;5;66;03m# we need to just return without initializing in that case.\u001b[39;00m\n\u001b[1;32m    217\u001b[0m \u001b[38;5;66;03m# However, we must not let any *other* threads in!\u001b[39;00m\n\u001b[1;32m    218\u001b[0m _tls\u001b[38;5;241m.\u001b[39mis_initializing \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero."
-     ]
-    }
-   ],
-   "source": [
-    "torch.zeros(1).cuda()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "YOLOv5 🚀 b49c412 Python-3.8.19 torch-1.10.1 CPU\n"
+      "YOLOv5 🚀 6b940e4a Python-3.8.19 torch-1.10.1 CUDA:0 (NVIDIA GeForce RTX 4090, 24188MiB)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Setup complete ✅ (24 CPUs, 31.3 GB RAM, 329.2/450.2 GB disk)\n"
+      "Setup complete ✅ (24 CPUs, 31.3 GB RAM, 284.1/450.2 GB disk)\n"
      ]
     }
    ],
@@ -396,11 +348,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "i3oKtE4g-aNn"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;38;5;196mCOMET ERROR:\u001b[0m Invalid Comet API key for https://www.comet.com/clientlib/\n",
+      "Please see https://www.comet.com/docs/command-line/#comet-check for more information.\n",
+      "Use: comet_ml.init() to try again\n"
+     ]
+    }
+   ],
    "source": [
     "#@title Select YOLOv5 🚀 logger {run: 'auto'}\n",
     "logger = 'Comet' #@param ['Comet', 'ClearML', 'TensorBoard']\n",
@@ -418,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -427,28 +396,6 @@
      "text": [
       "loading Roboflow workspace...\n",
       "loading Roboflow project...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading Dataset Version Zip in data/part-iv-project1 to yolov5pytorch:: 100%|██████████| 8888/8888 [00:01<00:00, 5241.77it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Extracting Dataset Version Zip to data/part-iv-project1 in yolov5pytorch:: 100%|██████████| 208/208 [00:00<00:00, 11142.81it/s]\n"
      ]
     }
    ],
@@ -560,7 +507,7 @@
   "kernelspec": {
    "display_name": "object",
    "language": "python",
-   "name": "object"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
